fix flicker

--- a/mage_ai/frontend/styles/scss/apps/Canvas/Pipelines/Builder.module.scss
+++ b/mage_ai/frontend/styles/scss/apps/Canvas/Pipelines/Builder.module.scss
@@ -101,6 +101,15 @@
   }
 }
 
+.captured {
+  opacity: 0;
+
+  &.transferred {
+    opacity: 1;
+  }
+}
+
+
 .hide {
   @include hide;
 }
